--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,39 @@
-<h1>EZCode!</h1>
-<h3>Website in development. Go to <a href="./old">Old Website</a> or <a href="https://github.com/JBrosDevelopment/EZCode">GitHub Repository</a></h3>
+<!DOCTYPE html>
+<html>
+<head>
+<title>EZCode</title>
+<meta charset="UTF-8">
+<link rel="icon" href="https://raw.githubusercontent.com/JBrosDevelopment/EZCode/master/EZCode/EZCode_Logo.ico" type="image/x-icon">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('https://raw.githubusercontent.com/JBrosDevelopment/EZCode/master/docs/Images/EZCode-Website-BG.png');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
+</head>
+<body>
+
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    <a href="https://ez-code.web.app"><img alt="Logo Image" style="filter: brightness(110%);" src="https://raw.githubusercontent.com/JBrosDevelopment/EZCode/master/docs/Images/EZCode_Wide_Logo.Small.png"></a>
+  </div>
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top" style="text-align: center;"><strong>EZCode</strong></h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center"><a href="https://github.com/JBrosDevelopment/EZCode">View Repository</a></p>
+    <p class="w3-large w3-center"><strong>EZCode</strong> is a visual programming language built off of <strong>C#</strong> and <strong>Microsoft's WinFoms</strong>. Write code <strong>faster</strong> with EZCode!</p>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+    Powered by <a href="https://jbros-development.web.app">JBros Development</a>
+  </div>
+</div>
+
+</body>
+</html>
