--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
+.download-btn{
+  background-color: rgb(23, 167, 16);
+  padding: 12px;
+  border-radius: 10px;
+  text-align: center;
+}
 </style>
 </head>
 <body>
@@ -27,8 +33,9 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top" style="text-align: center;"><strong>EZCode</strong></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"><a href="https://github.com/JBrosDevelopment/EZCode">View Repository</a></p>
+    <p class="w3-large w3-center"><a href="https://github.com/JBrosDevelopment/EZCode">View Repository</a> &ensp; | &ensp; <a href="https://github.com/JBrosDevelopment/EZCode/wiki">View Docs</a></p>
     <p class="w3-large w3-center"><strong>EZCode</strong> is a visual programming language built off of <strong>C#</strong> and <strong>Microsoft's WinFoms</strong>. Write code <strong>faster</strong> with EZCode!</p>
+    <p class="w3-large w3-center" style="padding: 15px;"><a class="download-btn" href="https://github.com/JBrosDevelopment/EZCode/releases/latest">Install Latest for Windows</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="https://jbros-development.web.app">JBros Development</a>
