--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@ body, html {height: 100%}
     <p style="padding: 15px;"><a class="download-btn" href="https://github.com/JBrosDevelopment/EZCode/releases/latest">Install Latest for Windows</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Developed by <a href="https://jbros-development.web.app">JBros Development</a>
+    Developed by <a href="https://github.com/JBrosDevelopment">JBros Development</a>
   </div>
 </div>
 
