--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@ body, html {height: 100%}
     <h1 class="w3-jumbo w3-animate-top" style="text-align: center;"><strong>EZCode</strong></h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p><a href="https://github.com/EZCodeLanguage/EZCode">View Repository</a> &ensp; | &ensp; <a href="https://github.com/EZCodeLanguage/EZCode/wiki">View Docs</a></p>
-    <p><strong>EZCode</strong> is a visual programming language built off of <strong>C#</strong> and <strong>Microsoft's WinFoms</strong>. Write code <strong>faster</strong> with EZCode!</p>
+    <p><strong>EZCode</strong> is a programming language built off of <strong>C#</strong> and <strong>.NET Core</strong>. Write code <strong>faster</strong> with EZCode!</p>
     <p style="padding: 15px;"><a class="download-btn" href="https://github.com/EZCodeLanguage/EZCode/releases/latest">Install Latest for Windows</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
