--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://raw.githubusercontent.com/JBrosDevelopment/EZCode/master/docs/Images/EZCode-Website-BG.png');
+  background-image: url('https://raw.githubusercontent.com/EZCodeLanguage/EZCode/master/docs/Images/Screenshot%202024-06-02%20121736.png');
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -64,7 +64,7 @@ body, html {height: 100%}
     <p style="padding: 15px;"><a class="download-btn" href="https://github.com/EZCodeLanguage/EZCode/releases/latest">Install Latest for Windows</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Developed by <a href="https://github.com/JBrosDevelopment">JBros Development</a>
+    Developed by <a href="https://jbros-development.web.app/">JBros Development</a>
   </div>
 </div>
 
