--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://raw.githubusercontent.com/EZCodeLanguage/EZCode/master/docs/Images/Screenshot%202024-06-02%20121736.png');
+  background-image: url('https://raw.githubusercontent.com/EZCodeLanguage/EZCode/master/docs/Images/webste-bg-image-v3.png');
   min-height: 100%;
   background-position: center;
   background-size: cover;
